Fix spacing between sections of the page at different breakpoints

--- a/public/styles/error.css
+++ b/public/styles/error.css
@@ -1,8 +1,8 @@
 .error-div {
   width: 90%;
-  margin: 20px auto 10px;
+  margin: 0px auto 30px;
   text-align: center;
   border: 1px solid red;
   color: red;
   display: none;
-}
+};
