--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -1,9 +1,11 @@
 .new-tweet {
   width: 100%;
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
 
 .new-tweet form {
-  margin-top: 20px; 
+  /* margin-top: 20px;  */
 }
 
 .new-tweet textarea {
