--- a/public/styles/tweet-section.css
+++ b/public/styles/tweet-section.css
@@ -1,9 +1,6 @@
 .tweet-section {
   display: flex;
   flex-direction: column;
-  padding-top: 10px;
-  padding-bottom: 10px;
-  margin-top: 40px;
 }
 
 .tweet {
